# matching-engine-cpp

./: .gitignore  CMakeLists.txt  QUICK_START.md  README.md  build.bat  build.sh  run_tests.bat  run_tests.sh
include/: Client.h  Common.h  MatchingEngine.h  Message.h  Order.h  OrderBook.h  Server.h  Trade.h
src/: Client.cpp  MatchingEngine.cpp  Order.cpp  OrderBook.cpp  Server.cpp  Trade.cpp  main_client.cpp  main_server.cpp
tests/: CMakeLists.txt  test_integration.cpp  test_matching_engine.cpp  test_order.cpp  test_orderbook.cpp  test_template.cpp
